
---
*** New command 'apropos-function'.
This works like 'C-u M-x apropos-command' but is more discoverable.

---
*** New keybinding 'C-h R' prompts for an Info manual and displays it.

---
*** Keybindings in 'help-mode' use the new 'help-key-binding' face.
This face is added by 'substitute-command-keys' to any "\[command]"
substitution.  The return value of that function should consequently
be assumed to be a propertized string.

Note that the new face will also be used in tooltips.  When using the
GTK toolkit, this is only true if 'x-gtk-use-system-tooltips' is t.

+++
*** New user option 'help-enable-symbol-autoload'.
If non-nil, displaying help for an autoloaded function whose
'autoload' form provides no documentation string will try to load the
file it's from.  This will give more extensive help for such
functions.

---
*** The 'help-for-help' ('C-h C-h') screen has been redesigned.

+++
*** New convenience commands with short keys in the Help buffer.
New command 'help-view-source' ('s') will view the source file (if
any) of the current help topic.  New command 'help-goto-info' ('i')
will look up the current symbol (if any) in Info.  New command
'help-customize' ('c') will customize the user option or the face
(if any) whose doc string is being shown in the Help buffer.

---
*** New user option 'describe-bindings-outline'.
It enables outlines in the output buffer of 'describe-bindings' that
can provide a better overview in a long list of available bindings.

+++
*** New commands to describe buttons and widgets.
'widget-describe' (on a widget) will pop up a help buffer and give a
description of the properties.  Likewise 'button-describe' does the
same for a button.

---
*** Improved "find definition" feature of "*Help*" buffers.
Now clicking on the link to find the definition of functions generated
by 'cl-defstruct', or variables generated by 'define-derived-mode',
for example, will go to the exact place where they are defined.

---